--- a/MuslimSurvivalKit/MuslimSurvivalKit.UWP/MuslimSurvivalKit.UWP.csproj
+++ b/MuslimSurvivalKit/MuslimSurvivalKit.UWP/MuslimSurvivalKit.UWP.csproj
@@ -165,6 +165,12 @@
     <PackageReference Include="sqlite-net-pcl">
       <Version>1.5.166-beta</Version>
     </PackageReference>
+    <PackageReference Include="Syncfusion.Xamarin.SfPdfViewer">
+      <Version>16.2.0.46</Version>
+    </PackageReference>
+    <PackageReference Include="Syncfusion.Xamarin.SfPicker">
+      <Version>16.2.0.46</Version>
+    </PackageReference>
     <PackageReference Include="System.Net.Http">
       <Version>4.3.3</Version>
     </PackageReference>
@@ -173,6 +179,9 @@
     </PackageReference>
     <PackageReference Include="Xam.Plugin.Connectivity">
       <Version>4.0.0.190-beta</Version>
+    </PackageReference>
+    <PackageReference Include="Xam.Plugin.Geolocator">
+      <Version>4.5.0.6</Version>
     </PackageReference>
     <PackageReference Include="Xam.Plugins.Forms.ImageCircle">
       <Version>3.0.0.6-beta</Version>
@@ -199,6 +208,11 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\arabtype.ttf" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="PrayerTimes">
+      <HintPath>..\..\..\..\..\Users\Muhammad Khan\Desktop\MSK\DLLs\PrayerTimes.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <Import Project="..\MuslimSurvivalKit\MuslimSurvivalKit.projitems" Label="Shared" />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
