--- a/MuslimSurvivalKit/MuslimSurvivalKit.iOS/Info.plist
+++ b/MuslimSurvivalKit/MuslimSurvivalKit.iOS/Info.plist
@@ -38,5 +38,15 @@
   <array>
     <string>arabtype.ttf</string>
   </array>
+  <key>NSLocationWhenInUseUsageDescription</key>
+  <string>This app needs access to location when open.</string>
+  <key>UIBackgroundModes</key>
+  <array>
+  	<string>location</string>
+  </array>
+  <key>NSLocationAlwaysUsageDescription</key>
+  <string>This app needs access to location when in the background.</string>
+  <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+  <string>This app needs access to location when open and in the background.</string>
 </dict>
 </plist>
