--- a/MuslimSurvivalKit/MuslimSurvivalKit.Android/MuslimSurvivalKit.Android.csproj
+++ b/MuslimSurvivalKit/MuslimSurvivalKit.Android/MuslimSurvivalKit.Android.csproj
@@ -53,9 +53,6 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Mono.Android" />
-    <Reference Include="PrayerTimes">
-      <HintPath>..\..\..\..\..\Users\Muhammad Khan\Desktop\MSK\DLLs\PrayerTimes.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -76,6 +73,9 @@
     </PackageReference>
     <PackageReference Include="Plugin.CurrentActivity">
       <Version>2.1.0.4</Version>
+    </PackageReference>
+    <PackageReference Include="PrayerTimes">
+      <Version>1.0.1</Version>
     </PackageReference>
     <PackageReference Include="Rg.Plugins.Popup">
       <Version>1.1.4.158-pre</Version>
