--- a/MuslimSurvivalKit/MuslimSurvivalKit.iOS/MuslimSurvivalKit.iOS.csproj
+++ b/MuslimSurvivalKit/MuslimSurvivalKit.iOS/MuslimSurvivalKit.iOS.csproj
@@ -148,9 +148,6 @@
     </ImageAsset>
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="PrayerTimes">
-      <HintPath>..\..\..\..\..\Users\Muhammad Khan\Desktop\MSK\DLLs\PrayerTimes.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
@@ -168,6 +165,9 @@
     </PackageReference>
     <PackageReference Include="Microsoft.CSharp">
       <Version>4.5.0</Version>
+    </PackageReference>
+    <PackageReference Include="PrayerTimes">
+      <Version>1.0.1</Version>
     </PackageReference>
     <PackageReference Include="Rg.Plugins.Popup">
       <Version>1.1.4.158-pre</Version>
